--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ bson==0.4.2
 Django==1.9.7
 django-nose==1.4.5
 djangorestframework==3.1.3
-mongoengine==0.9.0
+mongoengine>=0.9.0
 nose==1.3.7
 packaging==16.8
 psycopg2==2.7.3.2
